Made the header sticky and fixed spacing

--- a/src/app/layout/components/content/content.component.scss
+++ b/src/app/layout/components/content/content.component.scss
@@ -4,7 +4,7 @@
   .container {
     display: flex;
     justify-content: center;
-    margin: $spacing-16 $spacing-8;
+    padding: $spacing-16 $spacing-8;
 
     &__wrapper {
       max-width: 1920px;
